--- a/src/css/About.css
+++ b/src/css/About.css
@@ -363,10 +363,11 @@
 
 .seventh-text {
     color: rgb(34, 34, 34);
-    font-size: 33px;
+    font-size: 6.3vh;
     font-family: "Noto Sans KR", sans-serif;
     font-weight: 700;
     margin-top: 2rem;
+    margin-bottom: 8vh;
     line-height: 1.3em;
     text-align: center;
 }
@@ -394,15 +395,16 @@
 
 .about-name {
     font-family: 'poppinsM';
-    font-size: 16px;
+    font-size: 3.3vh;
     margin: 10px 0;
 }
 
 .about-bio {
-    font-size: 14px;
+    font-size: 2.2vh;
     color: rgb(129, 129, 129);
     font-family: "Noto Sans KR", sans-serif;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 1.5em;
     margin-top: 1rem;
+    margin-bottom: 5vh;
 }
