--- a/src/css/About.css
+++ b/src/css/About.css
@@ -204,7 +204,7 @@
 }
 
 .third {
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(243, 243, 243);
     padding: 5%;
     width: auto;
     height: fit-content;
@@ -286,7 +286,7 @@
 }
 
 .fifth {
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(243, 243, 243);
     padding: 5%;
     width: auto;
     height: fit-content;
@@ -321,11 +321,12 @@
 
 .sixth-text {
     color: rgb(34, 34, 34);
-    font-size: 33px;
+    font-size: 7vh;
     font-family: "Noto Sans KR", sans-serif;
     font-weight: 700;
-    margin-top: 2rem;
-    line-height: 1.3em;
+    margin-top: 2.7rem;
+    margin-bottom: 12vh;
+    line-height: 3.4rem;
     text-align: center;
 }
 
@@ -340,22 +341,32 @@
 
 .way {
     font-family: "Noto Sans KR", sans-serif;
-    font-weight: 700;
-    font-size: 17px;
+    font-weight: 600;
+    font-size: 4.8vh;
+    line-height: 2.4rem;
     margin: 10px 0;
 }
 
 .way-details {
-    font-size: 14px;
+    font-size: 2.2vh;
     color: rgb(129, 129, 129);
     font-family: "Noto Sans KR", sans-serif;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 1.5em;
     margin-top: 1rem;
+    margin-bottom: 3.3vh;
+}
+
+.way-details-more {
+    color: rgb(26, 87, 201);
+    font-family: "Noto Sans KR", sans-serif;
+    font-weight: 400;
+    font-size: 2.5vh;
+    margin-bottom: 7vh;
 }
 
 .seventh {
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(243, 243, 243);
     padding: 5%;
     width: auto;
     height: fit-content;
@@ -366,8 +377,8 @@
     font-size: 6.3vh;
     font-family: "Noto Sans KR", sans-serif;
     font-weight: 700;
-    margin-top: 2rem;
-    margin-bottom: 8vh;
+    margin-top: 2.7rem;
+    margin-bottom: 9.3vh;
     line-height: 1.3em;
     text-align: center;
 }
@@ -406,5 +417,5 @@
     font-weight: 500;
     line-height: 1.5em;
     margin-top: 1rem;
-    margin-bottom: 5vh;
+    margin-bottom: 7vh;
 }
