--- a/src/css/About.css
+++ b/src/css/About.css
@@ -312,6 +312,36 @@
     margin-left: 2rem;
 }
 
+.fifth-text>span {
+    position: relative;
+  text-decoration: none;
+  color: white;
+  display: inline-block;
+  background-size: 120% 100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+  -ms-background-clip: text;
+  -ms-text-fill-color: transparent;
+  background-clip: text;
+  background-image: linear-gradient(45deg, 
+                    #7794ff, 
+                    #44107A,
+                    #FF1361,
+                    #FFF800);
+  animation: 1s shake infinite alternate;
+}
+
+@keyframes shake {
+    0% { transform: skewX(-15deg); }
+    4% { transform: skewX(15deg); }
+    8% { transform: skewX(-15deg); }
+    12% { transform: skewX(15deg); }
+    16% { transform: skewX(0deg); }
+    100% { transform: skewX(0deg); }  
+}
+
 /* 굿즈 */
 .sixth  {
     background-color: white;
