--- a/src/css/TimeSlip.css
+++ b/src/css/TimeSlip.css
@@ -171,7 +171,6 @@ a {
     font-weight: 600;
     font-size: 4.7vh;
     color: white;
-    /* text-align: center; */
     margin-top: 7rem;
     margin-left: 5rem;
 }
@@ -181,7 +180,6 @@ a {
     font-weight: 200;
     font-size: 2.5vh;
     color: white;
-    /* text-align: center; */
     margin-top: 0.6rem;
     margin-left: 5rem;
 }
@@ -1057,4 +1055,200 @@ a {
     position: absolute;
     top: 43.1%;
     left: 70.1%;
+}
+
+.card-wrapper {
+    width: 100%;
+    min-height: 100vh;
+    background-color: #000;
+}
+
+.contentWrap {
+    width: fit-content;
+    transform: translate(-50%, -50%);
+    transform-style: preserve-3d;
+    perspective: 1000px;
+    visibility: hidden;
+    opacity: 0;
+    animation: move 5s infinite linear alternate;
+    margin-top: 40vh;
+    margin-left: 70vh;
+}
+  
+.active {
+    visibility: visible;
+    opacity: 1;
+}
+  
+.front {
+    position: relative;
+    width: 400px;
+    height: 250px;
+    background: linear-gradient(147deg, #e0c3fc 0%, #8ec5fc 74%);
+    transform: rotateX(-10deg);
+    transform-origin: bottom center;
+    transform-style: preserve-3d;
+    perspective: 800px;
+    border-radius: 10px 10px 0 0;
+}
+  
+.front .kiki {
+    position: absolute;
+    top: 10%;
+    left: 0;
+    width: 100%;
+    height: 20vh;
+    background: url(../assets/text.png) center top/200px no-repeat;
+    transform: translate3d(6px, 45px, 60px);
+}
+  
+.front .sun {
+    position: absolute;
+    top: 7%;
+    left: 0;
+    width: 50%;
+    height: 15vh;
+    background: url(../assets/stars.png) center top/160px no-repeat;
+    transform: translate3d(30px, 15px, 10px);
+}
+  
+.front .cloud1 {
+    position: absolute;
+    top: 0;
+    width: 100px;
+    height: 100px;
+    background: url(../assets/cloud.png) center center/40px no-repeat;
+    transform: translate3d(300px, 30px, 30px);
+    opacity: .8;
+    z-index: 10;
+}
+  
+.front .cloud2 {
+    position: absolute;
+    top: 0;
+    width: 100px;
+    height: 100px;
+    background: url(../assets/cloud.png) center center/36px no-repeat;
+    transform: translate3d(-20px, 90px, 40px);
+    opacity: .8;
+    z-index: 10;
+}
+  
+.front .m1 {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 90%;
+    height: 200px;
+    background: url(../assets/m3.png) right bottom/75% no-repeat;
+    transform: translate3d(-8px, 0, 26px);
+}
+  
+.front .m2 {
+    position: absolute;
+    bottom: 22%;
+    right: 10%;
+    width: 20%;
+    height: 12vh;
+    background: url(../assets/virus3.png) right bottom/100% no-repeat;
+    transform: translate3d(-10px, 0, 45px);
+}
+  
+.front .snow {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 50vh;
+    background: url(../assets/tw.png) center bottom/90% no-repeat;
+    transform: translate3d(0, 0, 35px);
+    opacity: .7;
+}
+  
+.front .m3 {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 50%;
+    height: 10vh;
+    background: url(../assets/tetris.png) left bottom/30% no-repeat;
+    transform: translate3d(-10px, -5px, 60px);
+}
+  
+.front .cow {
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    bottom: 0;
+    left: 0;
+    z-index: 10;
+    background: url(../assets/virus.png) center center/100% no-repeat;
+    transform: translate3d(65px, -9px, 48px);
+}
+  
+.back {
+    position: relative;
+    width: 400px;
+    height: 200px;
+    background: linear-gradient(180deg, #9e9e9e, #fff);
+    border-radius: 0 0 10px 10px;
+    transform: rotateX(60deg);
+    transform-origin: top center;
+    transform-style: preserve-3d;
+    perspective: 800px;
+}
+  
+.back h3 {
+    position: absolute;
+    font-size: 2vh;
+    text-align: right;
+    font-weight: 100;
+    right: 0;
+    bottom: 0;
+    transform-origin: bottom;
+    transform: translate3d(-20px, 0px, 2px);
+    color: #000;
+    font-family: 'Handlee', cursive, "Apple SD Gothic Neo", arial;
+}
+  
+.back .msg {
+    font-family: "Pretty_Left_handed";
+    position: absolute;
+    display: block;
+    width: 100%;
+    font-size: 4vh;
+    text-align: center;
+    font-weight: 100;
+    top: 8vh;
+    left: 0px;
+    transform-origin: bottom;
+    transform: translate3d(0px, 0px, 2px);
+    color: rgb(31, 31, 31);
+}
+
+
+@keyframes move {
+    0% {
+        transform: rotateX(-20deg);
+    }
+
+    20% {
+        transform: rotateY(20deg);
+    }
+
+    40% {
+        transform: rotateX(-10deg);
+    }
+
+    60% {
+        transform: rotateY(-20deg);
+    }
+
+    80% {
+        transform: rotateX(-10deg);
+    }
+
+    100% {
+        transform: rotateY(20deg);
+    }
 }
