굿즈 이미지 적용 및 이미지 assets 정리

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -460,14 +460,23 @@
 
 .case{
     width: 13vw;
+    object-fit: cover;
+    border-radius: 70%;
+    overflow: hidden;
 }
 
 .griptok{
     width: 13vw;
+    object-fit: cover;
+    border-radius: 70%;
+    overflow: hidden;
 }
 
 .keyring{
     width: 13vw;
+    object-fit: cover;
+    border-radius: 70%;
+    overflow: hidden;
 }
 
 .seventh {
