--- a/src/css/Exhibition.css
+++ b/src/css/Exhibition.css
@@ -17,7 +17,7 @@
 }
 
 .bs-all {
-    max-width: 1920px;
+    min-width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -27,7 +27,8 @@
 }
 
 .exhibition {
-    height: 88vh;
+    min-height: 88vh;
+    max-width: fit-content;
     width: 100%;
 }
 
