--- a/src/css/TimeSlip.css
+++ b/src/css/TimeSlip.css
@@ -31,16 +31,17 @@
 }
 
 .ts-all {
-    max-width: 1920px;
+    min-width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: #e0c3fc;
     background-image: linear-gradient(147deg, #e0c3fc 0%, #8ec5fc 74%);
 }
 
 .timeslip {
-    height: 88vh;
+    min-height: 88vh;
     width: 100%;
 }
 
