--- a/src/css/TimeSlip.css
+++ b/src/css/TimeSlip.css
@@ -630,12 +630,14 @@ a {
     position: absolute;
     top: 29.8%;
     left: 27.2%;
+    z-index: 1;
 }
 
 .select2 {
     position: absolute;
     top: 29.8%;
     left: 31.1%;
+    z-index: 0;
 }
 
 .select3 {
